    - Date values use 64bit integers
    - Integer conversion operators were made 'const'
    - GetElementList() function for EbmlMaster providing a reference to the underlying std::vector<> for better interaction with the C++ standard library
    - New constructor for UTFstring taking a single std::wstring
    - Increased library .so name to .4 due to binary incompatible changes.

2011-09-23 robux4/mosu
New 1.2.2 version:
    - fix usage of the DEBUG #define (use LIBEBML_DEBUG instead)
    - The EbmlCodeVersion variable now resides in the library instead of being declared static in the header file.
    - only use the test element to read once in the loop

2011-06-26 robux4/mosu
New 1.2.1 version:
    - fix the constructor of CRTError in StdIOCallback (patch from Graham 'gbooker' Booker)
    - fix the size returned by MemIOCallback::read() when reaching the end of the buffer
    - add a macro to define signed integer elements that have a default value
    - fix compilation of debug builds on win32
    - fix for Sun Studio C compiler

2011-01-30 robux4/mosu
New 1.2.0 version:
    - no need to put the internal code of EbmlCrc32 in the public header
    - more safety on the Binary buffer handling in case we run out of memory
    - fix CRC32 detection in master elements
    - fix compilation under gcc 4.5
    - Fixed handling of UTF-8 strings with characters encoded in more than three bytes.
    - Increased library .so name to .3 due to binary incompatible changes.

2010-07-xx robux4
New 1.1.0 version:
    - EbmlElement::VoidMe() now returns a uint64
    - move some operator code in the .cpp files (MSVC has issues in DLLs)

2010-06-04 robux4/mosu
New 1.0.0 version:
    - rename the library .so name as it's backward incompatible
    - fixes when reading Master elements with unknown/infinite size
    - fix the infinite/unknown size reading in EbmlElement::FindNextElement()
    - fix the EBMLDummy ID reading and displaying

2010-04-30 robux4/mosu
New 0.8.0 version: