@@ -1,15 +1,0 @@
-Source: libebml
-Priority: optional
-Maintainer: Moritz Bunkus <moritz@bunkus.org>
-Build-Depends: debhelper (>> 3.0.0)
-Standards-Version: 3.5.8
-Section: libs
-
-Package: libebml-dev
-Section: libdevel
-Architecture: any
-Depends: ${shlibs:Depends}
-Description: Extensible Binary Meta Language access library
- A library for reading and writing files with the Extensible Binary
- Meta Language, a binary pendant to XML.
-
