@@ -1,2 +1,0 @@
-usr/lib
-usr/include
