@@ -1,2 +1,0 @@
-usr/include/*
-usr/lib/lib*.a
