@@ -1,191 +1,0 @@
-libebml (1.3.0-1) precise; urgency=low
-
-  * New version.
-
- -- Moritz Bunkus <moritz@bunkus.org>  Tue, 19 Mar 2013 18:30:00 +0000
-
-libebml (1.2.2-1) natty; urgency=low
-
-  * New version.
-
- -- Moritz Bunkus <moritz@bunkus.org>  Fri, 23 Sep 2011 13:22:24 +0200
-
-libebml (1.2.1-1) natty; urgency=low
-
-  * New version.
-
- -- Moritz Bunkus <moritz@bunkus.org>  Wed, 15 Jun 2011 13:55:50 +0200
-
-libebml (1.2.0-1) lucid; urgency=low
-
-  * New version.
-
- -- Moritz Bunkus <moritz@bunkus.org>  Sun, 30 Jan 2011 15:30:00 +0200
-
-libebml (1.0.0-1) lucid; urgency=low
-
-  * New version.
-
- -- Moritz Bunkus <moritz@bunkus.org>  Sat, 05 Jun 2010 10:39:00 +0200
-
-libebml (0.8.0-1) karmic; urgency=low
-
-  * New version.
-
- -- Moritz Bunkus <moritz@bunkus.org>  Sun, 09 May 2010 16:56:41 +0200
-
-libebml (0.7.8-1) unstable; urgency=low
-
-  * New version.
-
- -- Moritz Bunkus <moritz@bunkus.org>  Wed,  5 Mar 2008 12:04:07 +0100
-
-libebml (0.7.7-1) unstable; urgency=low
-
-  * New version.
-
- -- Moritz Bunkus <moritz@bunkus.org>  Fri, 31 Mar 2006 14:28:30 +0200
-
-libebml (0.7.6-1) unstable; urgency=low
-
-  * New version.
-
- -- Moritz Bunkus <moritz@bunkus.org>  Tue, 18 Oct 2005 19:54:16 +0200
-
-libebml (0.7.5-2) unstable; urgency=low
-
-  * Rebuilt with g++ 4.0.2.
-
- -- Moritz Bunkus <moritz@bunkus.org>  Sat, 15 Oct 2005 14:20:24 +0200
-
-libebml (0.7.5-1) unstable; urgency=low
-
-  * New version.
-
- -- Moritz Bunkus <moritz@bunkus.org>  Fri, 20 May 2005 16:27:42 +0200
-
-libebml (0.7.4-1) unstable; urgency=low
-
-  * New version.
-
- -- Moritz Bunkus <moritz@bunkus.org>  Sat, 16 Apr 2005 13:05:06 +0200
-
-libebml (0.7.3-1) unstable; urgency=low
-
-  * New version.
-
- -- Moritz Bunkus <moritz@bunkus.org>  Wed, 10 Nov 2004 21:47:35 +0100
-
-libebml (0.7.2-1) unstable; urgency=low
-
-  * New version.
-
- -- Moritz Bunkus <moritz@bunkus.org>  Sun, 26 Sep 2004 12:16:57 +0200
-
-libebml (0.7.1-1) unstable; urgency=low
-
-  * New version.
-
- -- Moritz Bunkus <moritz@bunkus.org>  Sun, 25 Jul 2004 12:15:48 +0200
-
-libebml (0.7.0-1) unstable; urgency=low
-
-  * New version.
-
- -- Moritz Bunkus <moritz@bunkus.org>  Fri, 23 Apr 2004 18:38:00 +0200
-
-libebml (0.6.5-1) unstable; urgency=low
-
-  * New version.
-
- -- Moritz Bunkus <moritz@bunkus.org>  Tue,  9 Mar 2004 21:32:18 +0100
-
-libebml (0.6.4-1) unstable; urgency=low
-
-  * New version.
-
- -- Moritz Bunkus <moritz@bunkus.org>  Mon, 19 Jan 2004 11:28:42 +0100
-
-libebml (0.6.3-1) unstable; urgency=low
-
-  * New version.
-
- -- Moritz Bunkus <moritz@bunkus.org>  Thu, 25 Dec 2003 13:27:27 +0100
-
-libebml (0.6.2-1) unstable; urgency=low
-
-  * New version.
-
- -- Moritz Bunkus <moritz@bunkus.org>  Fri, 31 Oct 2003 09:34:13 +0100
-
-libebml (0.6.1-1) unstable; urgency=low
-
-  * New version.
-
- -- Moritz Bunkus <moritz@bunkus.org>  Tue, 28 Oct 2003 22:45:25 +0100
-
-libebml (0.6.0-1) unstable; urgency=low
-
-  * New version.
-
- -- Moritz Bunkus <moritz@bunkus.org>  Wed, 17 Sep 2003 22:28:18 +0200
-
-libebml (0.5.1-1) unstable; urgency=low
-
-  * New version.
-
- -- Moritz Bunkus <moritz@bunkus.org>  Mon,  1 Sep 2003 13:27:54 +0200
-
-libebml (0.5.0-1) unstable; urgency=low
-
-  * New version.
-
- -- Moritz Bunkus <moritz@bunkus.org>  Mon, 28 Jul 2003 10:48:35 +0200
-
-libebml (0.4.4-2) unstable; urgency=low
-
-  * New version.
-
- -- Moritz Bunkus <moritz@bunkus.org>  Sat, 14 Jun 2003 17:41:43 +0200
-
-libebml (0.4.4-1) unstable; urgency=low
-
-  * New version.
-
- -- Moritz Bunkus <moritz@bunkus.org>  Wed, 11 Jun 2003 20:27:01 +0200
-
-libebml (0.4.3-1) unstable; urgency=low
-
-  * New version.
-
- -- Moritz Bunkus <moritz@bunkus.org>  Wed, 21 May 2003 22:34:46 +0200
-
-libebml (0.4.2-1) unstable; urgency=low
-
-  * New version.
-
- -- Moritz Bunkus <moritz@bunkus.org>  Tue,  6 May 2003 22:21:09 +0200
-
-libebml (0.4.0-2) unstable; urgency=low
-
-  * Compiled with gcc 3.2.3.
-
- -- Moritz Bunkus <moritz@bunkus.org>  Sun, 04 May 2003 22:14:26 +0200
-
-libebml (0.4.0-1) unstable; urgency=low
-
-  * First official alpha release.
-
- -- Moritz Bunkus <moritz@bunkus.org>  Wed, 30 Apr 2003 10:27:26 +0200
-
-libebml (0.2.0.20030424-1) unstable; urgency=low
-
-  * New version with bugfixes from Steve.
-
- -- Moritz Bunkus <moritz@bunkus.org>  Thu, 24 Apr 2003 19:57:48 +0200
-
-libebml (0.2.0.20030421-1) unstable; urgency=low
-
-  * Initial Release.
-
- -- Moritz Bunkus <moritz@bunkus.org>  Mon, 21 Apr 2003 12:49:33 +0200
